# zo

./: .gitignore  Cargo.toml  README.md  brainstorm.md  gamadji.jn  glossary.md  spec_v1.md  syntax.md  type_judgments.md
cinzo/: Cargo.toml
cinzo/src/: abbreviated_formatting.rs  ast.rs  cst.rs  cst_to_ast.rs  deb_shift_cache.rs  eval.rs  lexer.rs  lib.rs  parser.kiki  parser.rs  replace_debs.rs  semantic_hash.rs  token.rs  typecheck.rs
cinzo/src/eval/: deb_substituter.rs  mod.rs  normalized.rs  replace_debs.rs  tests.rs
cinzo/src/parser_tests/: for_.rs  (+2 more)
june/: Cargo.toml
june/src/: lexer.rs  lib.rs  token.rs
june/syntaxes/: june.tmLanguage.json
june_vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
kozo/: Cargo.toml
kozo/src/: ast.rs  cst_to_ast.rs  cst_to_rch_cst.rs  hashed.rs  lib.rs  nh_cst_to_rch_cst.rs  nohash_hashmap.rs  parser.kiki  rch_cst.rs  rch_cst_to_ast.rs  replace_debs.rs  semantic_hash.rs  sha256_hasher.rs  test_utils.rs  typecheck.rs
may/: Cargo.toml  build.rs  chicken_scratch.txt  june_chicken_scratch.txt  kiki_todo.txt  std.may  temp.annotated.txt  temp.shift_4_add_succ.txt  temp.txt
may/src/: generated_parser.kiki  generated_parser.rs  lexer.rs  lib.rs  token.rs
may_vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
may_vscode/may/: README.md  test.may
may_vscode/syntaxes/: may.tmLanguage.json
zoc/: Cargo.toml  build.rs
zoc/src/: ast.rs  check_erasability.rs  cst_to_ast.rs  lexer.rs  lib.rs  parser.kiki  parser.rs  parser_tests.rs  semantic_hash.rs  test_utils.rs  token.rs
(+470 files in other folders)
